# aioneverdark

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
examples/: control.py  get_info.py  get_stats.py  shared_session.py
src/aioneverdark/: __init__.py  client.py  const.py  exceptions.py  models.py
tests/: conftest.py  test_client.py
