[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioneverdark"
version = "0.1.0"
description = "Async Python library for the Neverdark Fireplace API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aioneverdark"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/aioneverdark"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
