[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioneverdark"
version = "0.1.0"
description = "Asynchronous Python client for the Neverdark Fireplace"
authors = [{ name="Michiel Lankamp", email="<hello@c-hekje.nl>"}]
maintainers = [{name="Michiel Lankamp", email="<hello@c-hekje.nl>"}]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
]
keywords = ["client", "neverdark", "fireplace"]

[project.urls]
homepage = "https://github.com/mlankamp/aioneverdark"
repository = "https://github.com/mlankamp/aioneverdark"
documentation = "https://github.com/mlankamp/aioneverdark"
"Bug Tracker" = "https://github.com/mlankamp/aioneverdark/issues"
Changelog = "https://github.com/mlankamp/aioneverdark/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "mypy>=1.9",
    "ruff>=0.4",
    "pylint>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aioneverdark"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
platform = "linux"
python_version = "3.11"
strict = true
files = ["src/aioneverdark"]

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint.messages_control]
# Disable rules already covered by ruff (style, formatting, imports, annotations)
disable = [
    "C0103",  # invalid-name         (ruff UP)
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long        (ruff E501)
    "C0303",  # trailing-whitespace  (ruff W291)
    "C0411",  # wrong-import-order   (ruff I)
    "W0611",  # unused-import        (ruff F401)
    "W0622",  # redefined-builtin    (ruff A)
    "R0903",  # too-few-public-methods (pydantic models legitimately trigger this)
]

[tool.pylint.design]
max-args = 6
max-attributes = 10
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-returns = 6
max-statements = 50

[tool.pylint.format]
max-line-length = 100

